--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQLDT0V6ZV"></script> 
+    <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'G-EQLDT0V6ZV'); </script>
     <body>
         Hi
     </body>
