--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'G-EQLDT0V6ZV'); </script>
     </head>
     <body>
-        Hi
+        <span id="main"/>
+        <script>
+            var tar = document.getElementedById("main");
+                        tar.innerHtml = date.Now;
+        </script>
     </body>
 </html>
