--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <span id="main"/>
         <script>
-            var tar = document.getElementedById("main");
+            var tar = document.getElementById("main");
                         tar.innerHtml = date.Now;
         </script>
     </body>
