This is getting sad

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <span id="main"/>
         <script>
             var tar = document.getElementById("main");
-                        tar.innerHtml = date.Now;
+                        tar.innerHtml = Date.Now();
         </script>
     </body>
 </html>
