--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <span id="main"/>
         <script>
             var tar = document.getElementById("main");
-                        tar.innerHtml = Date.Now();
+                        tar.innerHtml = Date.now();
         </script>
     </body>
 </html>
