--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" content-type="utf-8">
     <head>
         <title></title>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQLDT0V6ZV"></script>
         <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'G-EQLDT0V6ZV'); </script>
     </head>
     <body>
-        <span id="main"/>
-        <script>
-            var tar = document.getElementById("main");
-                        tar.innerHtml = Date.now();
-        </script>
+        <iframe width="100%" height="100%" src="https://www.viber.com" />
     </body>
 </html>
