switch frame src

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'G-EQLDT0V6ZV'); </script>
     </head>
     <body>
-        <iframe width="100%" height="100%" src="https://www.viber.com" />
+        <iframe width="100%" height="100%" src="https://www.google.com"/>
     </body>
 </html>
